@@ -22,6 +22,8 @@ New in 0.9.11:
   a pattern for use in totality checking. 
   e.g. "assert_smaller (x :: xs) (f xs)" asserts that "f xs" will always be
   structurally smaller than "(x :: xs)"
+* assert_total internal function, which marks a subexpression as assumed to
+  be total, e.g "assert_total (tail (x :: xs))".
 
 Internal changes
 
